<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ScrollView
        android:layout_height="fill_parent"
    	android:layout_width="wrap_content">    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/uikNoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sUIKNoName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/uikNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/usermailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sUserMailName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/notesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sNotes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/notesString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text|textMultiLine"
	        android:minLines="3" />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_margin="15dp"
            android:background="@android:color/background_light" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sLocation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/locationString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lat:No fix\nLon: No fix"
            android:textAppearance="?android:attr/textAppearanceSmall"            
	        />
        
        <Button
            android:id="@+id/sendDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btSend" />

    </LinearLayout>
	</ScrollView>
</RelativeLayout>
